--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.0
+backports.zoneinfo==0.2.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
 coreapi==2.3.3
@@ -24,5 +25,6 @@ requests==2.27.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
 sqlparse==0.4.2
+tzdata==2022.7
 uritemplate==4.1.1
 urllib3==1.26.9
