--- a/flask/.vscode/launch.json
+++ b/flask/.vscode/launch.json
@@ -16,8 +16,7 @@
             },
             "args": [
                 "run",
-                "--no-debugger",
-                "--no-reload"
+                "--no-debugger"
             ],
             "jinja": true,
             "justMyCode": true
